assets/css/style.css
/* ... */
.nav_item_has_child .nav_item_megamenu .mega_item_area li a {
  color: #6f7175;
  font-size: 18px;
  font-weight: 600;
  display: block;
  -webkit-transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
  transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
}
.nav_item_has_child .nav_item_megamenu .mega_item_area li a:hover {
  color: #3b3b3b;
  -webkit-transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
  transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
}
.nav_item_has_child .nav_item_megamenu .mega_item_thumb1 {
  bottom: -76px;
  left: -140px;
  z-index: -1;
}
.nav_item_has_child .nav_item_megamenu .mega_item_thumb2 {
  top: -23px;
  right: -52px;
  z-index: -1;
}
.nav_item_has_child .nav_item_submenu {
  top: 64px;
  left: -138px;
  min-width: 370px;
  min-height: 425px;
  position: fixed;
  display: none;
  -webkit-transform: translateY(50px);
          transform: translateY(50px);
  border-bottom-left-radius: 20px;
  border-bottom-right-radius: 20px;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  -webkit-animation: 0.3s ease-in-out 0s normal none 1 running fadeInUp;
          animation: 0.3s ease-in-out 0s normal none 1 running fadeInUp;
}
.nav_item_has_child .nav_item_submenu .nav_submenu_cont {
  margin-top: 60px;
  margin-left: 80px;
}
.nav_item_has_child .nav_item_submenu .nav_submenu_cont h4 {
  color: #242f51;
  font-size: 20px;
  font-weight: 700;
  margin-bottom: 30px;
  position: relative;
}
.nav_item_has_child .nav_item_submenu .nav_submenu_cont h4:after {
  content: "";
  top: 37px;
  left: -4px;
  width: 234px;
  height: 1px;
  position: absolute;
  background-color: #d5d7da;
}
.nav_item_has_child .nav_item_submenu .nav_submenu_cont li {
  margin-top: 15px;
  position: relative;
  z-index: 99;
}
.nav_item_has_child .nav_item_submenu .nav_submenu_cont li:before {
  content: "";
  top: 11px;
  left: -18px;
  width: 6px;
  height: 6px;
  border-radius: 100%;
  position: absolute;
  background-color: #b1b1b1;
}
.nav_item_has_child .nav_item_submenu .nav_submenu_cont li a {
  color: #6f7175;
  font-size: 18px;
  font-weight: 600;
  display: inline-block;
  -webkit-transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
  transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
}
.nav_item_has_child .nav_item_submenu .nav_submenu_cont li a:hover {
  color: #3b3b3b;
  -webkit-transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
  transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
}
.nav_item_has_child:hover .nav_item_megamenu {
  padding: 0px;
  display: block;
  -webkit-animation-duration: 1s;
          animation-duration: 1s;
  -webkit-animation-fill-mode: both;
          animation-fill-mode: both;
  -webkit-transform: translateY(2px);
          transform: translateY(2px);
}
.nav_item_has_child:hover .nav_item_submenu {
  padding: 0px;
  display: block;
  -webkit-animation-duration: 1s;
          animation-duration: 1s;
  -webkit-animation-fill-mode: both;
          animation-fill-mode: both;
  -webkit-transform: translateY(2px);
          transform: translateY(2px);
}

.dropdown_item_has_child > a {
  position: relative;
}
.dropdown_item_has_child .submenu {
  top: -9px;
  right: -235px;
  opacity: 0;
  z-index: 99;
  margin: 0px;
  padding: 0px;
  min-width: 235px;
  visibility: hidden;
  position: absolute;
  background: #ffffff;
  -webkit-transform: translateY(15px);
          transform: translateY(15px);
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  -webkit-box-shadow: 0px 2px 19px 3px rgba(0, 0, 0, 0.08);
          box-shadow: 0px 2px 19px 3px rgba(0, 0, 0, 0.08);
  border-top: 4px solid #81c408;
  border-bottom: 4px solid #81c408;
  display: block;
}
.dropdown_item_has_child .submenu > li {
  width: 100%;
  display: block;
}
.dropdown_item_has_child .submenu > li:not(:last-child) {
  border-bottom: 1px solid #e3e3e3;
}
.dropdown_item_has_child .submenu > li > a {
  display: block;
  line-height: 1;
  font-size: 17px;
  font-weight: 500;
  padding: 15px 30px;
  white-space: nowrap;
  color: #8b8b8b;
}
.dropdown_item_has_child .submenu > li:hover > a, .dropdown_item_has_child .submenu > li.active > a {
  color: #292929;
  background-color: #f0f0f0;
}
.dropdown_item_has_child:hover > .submenu {
  opacity: 1;
  visibility: visible;
  -webkit-transform: translateY(0px);
          transform: translateY(0px);
}

.sidebar_nav_item {
  min-width: 300px;
}
.sidebar_nav_item li {
  margin-top: 12px;
  margin-left: 12px;
}
.sidebar_nav_item li a {
  color: #7d7e82;
  display: block;
}

.filter_area .layout_tab_nav li:not(:last-child) {
  margin-right: 10px;
}
.filter_area .layout_tab_nav button {
  z-index: 1;
  width: 40px;
  height: 40px;
  margin: -0.5px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  color: #bdbdbd;
  font-weight: normal;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  border: 1px solid #eaeaeb;
  background-color: #f6fafb;
  border-radius: 4px;
}
.filter_area .layout_tab_nav button.active {
  color: #ffffff !important;
  background-color: #7cc000;
}
.filter_area .layout_tab_nav button:hover {
  background-color: #7cc000;
}
.filter_area .layout_tab_nav button svg {
  fill: #bdbdbd;
  width: 20px;
  height: 20px;
}
.filter_area .layout_tab_nav button:hover svg, .filter_area .layout_tab_nav button.active svg {
  fill: #ffffff;
  width: 20px;
  height: 20px;
}
.filter_area .show_result {
  color: #6c6c6c;
  font-size: 15px;
  font-weight: 400;
  margin-left: 15px;
}
.filter_area .sorting_from {
  background-color: #f6fafb;
  padding: 2px 15px;
  border-radius: 6px;
}
.filter_area .sorting_from_title {
  color: #6c6c6c;
  font-size: 15px;
  font-weight: 400;
  margin-right: 15px;
}

.nice-select {
  background-color: transparent;
  border: none !important;
}
/* ... */

